# logging

./: .gitignore  CMakeLists.txt  Makefile  TODO
example/: CMakeLists.txt  main.c  module.c  module.h
include/: log_level.h  log_sink.h  log_sink_file.h  log_sink_interface.h  log_sink_stdout.h  log_source.h  log_system.h  logger_interface.h
logging/: Makefile  logger.txt
logging/include/: log_level.h  log_sink.h  log_sink_file.h  log_sink_interface.h  log_sink_stdout.h  log_source.h  logger.h
logging/src/: log_level.c  log_sink.c  log_sink_file.c  log_sink_stdout.c  log_source.c
src/: CMakeLists.txt  log_sink.c  log_sink_stdout.c  log_source.c  log_system.c  logger.c
